helper/output.txt
bc7e78bbc91785fca0bc718d204530b5/file.cpp: In function ‘int main()’:
bc7e78bbc91785fca0bc718d204530b5/file.cpp:6:10: error: ‘x’ does not name a type
     auto x = s.begin();
          ^
bc7e78bbc91785fca0bc718d204530b5/file.cpp:7:14: error: ‘x’ was not declared in this scope
     cout << *x << endl;
              ^
